新增header及footer ejs檔案

--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,33 @@
-<footer class="footer">我是 footer</footer>
+<footer class="footer bg-primary">
+    <div class="container">
+        <div class="footer-nav">
+            <div class="footer-top">
+                <div class="footer-link">
+                    <ul class="footer-link-item">
+                        <li><a href="index.html">首頁</a></li>
+                        <li><a href="#">系列鏡框</a></li>
+                        <li><a href="#">門市據點</a></li>
+                        <li><a href="#">部落格</a></li>
+                        <li><a href="#">常見問題</a></li>
+                    </ul>
+                    <ul class="footer-link-icon">
+                        <li><a href="#"><img src="" alt=""></a></li>
+                        <li><a href="#"><img src="" alt=""></a></li>
+                        <li><a href="#"><img src="" alt=""></a></li>
+                    </ul>
+                </div>
+                <ul class="footer-message">
+                    <li><a href="#"><span class="material-symbols-outlined">call</span> 0800-000-00</a></li>
+                    <li><a href="#"><span class="material-symbols-outlined">mail</span> glasses@business.co</a></li>
+                </ul>
+            </div>
+            <div class="footer-copy-right">
+                <p>Copyright &copy; 2020 Glasses.ALL rights reserved.</p>
+                <ul class="footer-copy-right">
+                    <li><a href="#">隱私權政策</a></li>
+                    <li><a href="#">服務條款</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
