--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,13 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<header class="header bg-primary">
+    <nav class="container header-nav">
+        <div class="logo">
+            <h1><a href="index.html">Glasses</a></h1>
+        </div>
+        <ul class="header-nav-link">
+            <li><a href="#">系列鏡框</a></li>
+            <li><a href="#">門市據點</a></li>
+            <li><a href="#">部落格</a></li>
+            <li><a href="#">常見問題</a></li>
+        </ul>
+    </nav>
+</header>
