all.scss impoot variable檔案

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,6 +1,7 @@
 @import '_reset.scss';
 @import '_base.scss';
 @import '_vendors.scss';
+@import '_variable.scss';
 @import '_mixin.scss';
 @import './layout/header.scss';
 @import './layout/footer.scss';
