新增layout footer樣式設定

--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,3 +1,11 @@
 $primary-color: #aa0601;
 $secondary-color: #ffffff;
 $tertiary-color: #fbf2f2;
+
+$fz-14: 14px;
+$fz-16: 16px;
+$fz-20: 20px;
+$fz-24: 24px;
+$fz-36: 36px;
+$fz-48: 48px;
+$fz-64: 64px;
