--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,7 +1,10 @@
+//color
 $primary-color: #aa0601;
 $secondary-color: #ffffff;
 $tertiary-color: #fbf2f2;
+$border-left-red: #9f1213;
 
+//font-size
 $fz-14: 14px;
 $fz-16: 16px;
 $fz-20: 20px;
