--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -3,14 +3,14 @@
         <div class="footer-nav">
             <div class="footer-top">
                 <div class="footer-link">
-                    <ul class="footer-link-item">
+                    <ul class="footer-item">
                         <li><a href="index.html">首頁</a></li>
                         <li><a href="#">系列鏡框</a></li>
                         <li><a href="#">門市據點</a></li>
                         <li><a href="#">部落格</a></li>
                         <li><a href="#">常見問題</a></li>
                     </ul>
-                    <ul class="footer-link-icon">
+                    <ul class="footer-icon">
                         <li><a href="#"><img src="" alt=""></a></li>
                         <li><a href="#"><img src="" alt=""></a></li>
                         <li><a href="#"><img src="" alt=""></a></li>
