--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -3,8 +3,8 @@
 @import '_vendors.scss';
 @import '_variable.scss';
 @import '_mixin.scss';
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import './layout/_header.scss';
+@import './layout/_footer.scss';
 
 
 @import './pages/index.scss';
