--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -3,7 +3,9 @@ $primary-color: #aa0601;
 $secondary-color: #ffffff;
 $tertiary-color: #fbf2f2;
 $border-left-red: #9f1213;
-
+$border-gray: #DEE2E6;
+$primary-text-color: #650300;
+$secondary-text-color: #ffffff;
 //font-size
 $fz-14: 14px;
 $fz-16: 16px;
