--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,146 @@
-.index-title {
-  font-size: 100px;
+//banner
+.banner {
+    color: $primary-text-color;
+    background-image: url(https://github.com/zitonbar/2023-week3-product/blob/main/images/home-header.png?raw=true);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    &-content {
+      padding: 296px 0;
+      text-align: right;
+      margin-left: auto;
+      p {
+        font-size: $fz-36;
+      }
+      span {
+        font-size: $fz-64;
+        font-weight: 700;
+      }
+    }
+}
+  
+  //feature
+  .feature {
+    background-color: $tertiary-color;
+    color: $primary-text-color;
+    &-content {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    &-item {
+      width: 306px;
+      text-align: center;
+      &:nth-child(2){
+        margin: 0 12px;
+      }
+      &:nth-child(3){
+        margin: 0 12px;
+      }
+      img {
+        width: 100px;
+      }
+      &-title {
+        font-size: $fz-24;
+        font-weight: 700;
+        margin: 24px 0 8px 0;
+      }
+      p {
+        text-align: left;
+      }
+    }
+}
+  //classic
+  .classic {
+    &-list {
+      display: flex;
+      li {
+        &:nth-child(2){
+          margin: 0 24px;
+        }
+      }
+      img {
+        width: 416px;
+      }
+      h4 {
+        margin-top: 8px;
+      }
+    }
+}
+  //co-branding
+  .co-branding {
+      background-image: url(https://github.com/zitonbar/2023-week3-product/blob/main/images/index-bg.png?raw=true);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      ul {
+        display: flex;
+        align-items: center;
+      }
+      h4 {
+        padding: 8px 0;
+      }
+}
+  //recommend
+  .recommend {
+    &-list {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    &-item {
+        width: 306px;
+        &:nth-child(2){
+            margin: 0 12px;
+        }
+        &:nth-child(3){
+            margin: 0 12px;
+        }
+        &-content {
+            display: flex;
+            flex-direction: column;
+            padding: 16px;
+            border: 1px solid $border-gray;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16);
+            height: 205px;
+        }
+    }
+}
+.name {
+    display: inline-block;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+.time {
+    display: block;
+    margin-top: auto;
+        &-style {
+            font-size: $fz-14;
+        }
+}
+
+  //contact
+.contact {
+    &-box {
+        background-color: $tertiary-color;
+        p {
+            font-size: $fz-20;
+        }
+    }
+    &-content {
+        width: 48%;
+        margin: 0 auto;
+    }
+    &-form {
+        display: flex;
+        flex-direction: column;
+        margin-top: 24px;
+        input {
+            @extend %form-style;
+        }
+    }
+}
+.feedback {
+    @extend %form-style;
+}
+.checkbox-block {
+    margin-bottom: 48px;
 }
