--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,11 +1,14 @@
 @import '_reset.scss';
-@import '_base.scss';
 @import '_vendors.scss';
 @import '_variable.scss';
+@import '_base.scss';
 @import '_mixin.scss';
+@import '_extend.scss';
 @import './layout/_header.scss';
 @import './layout/_footer.scss';
 
 
 @import './pages/index.scss';
 @import './pages/faq.scss'
+
+
