--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-primary">
+<footer class="footer">
     <div class="container">
         <div class="footer-nav">
             <div class="footer-top">
@@ -11,9 +11,9 @@
                         <li><a href="#">常見問題</a></li>
                     </ul>
                     <ul class="footer-icon">
-                        <li><a href="#"><img src="" alt=""></a></li>
-                        <li><a href="#"><img src="" alt=""></a></li>
-                        <li><a href="#"><img src="" alt=""></a></li>
+                        <li><a href="#"><img src="https://zitonbar.github.io/2023-week3-product/images/ic-social-fb.png" alt=""></a></li>
+                        <li><a href="#"><img src="https://zitonbar.github.io/2023-week3-product/images/ic_social_ig.png" alt=""></a></li>
+                        <li><a href="#"><img src="https://zitonbar.github.io/2023-week3-product/images/ic_social_line.png" alt=""></a></li>
                     </ul>
                 </div>
                 <ul class="footer-message">
@@ -21,9 +21,9 @@
                     <li><a href="#"><span class="material-symbols-outlined">mail</span> glasses@business.co</a></li>
                 </ul>
             </div>
-            <div class="footer-copy-right">
+            <div class="footer-copyright">
                 <p>Copyright &copy; 2020 Glasses.ALL rights reserved.</p>
-                <ul class="footer-copy-right">
+                <ul class="footer-copyright-link">
                     <li><a href="#">隱私權政策</a></li>
                     <li><a href="#">服務條款</a></li>
                 </ul>
