scss檔案內容修改

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -2,7 +2,7 @@
 @import '_vendors.scss';
 @import '_variable.scss';
 @import '_base.scss';
-@import '_mixin.scss';
+// @import '_mixin.scss';
 @import '_extend.scss';
 @import './layout/_header.scss';
 @import './layout/_footer.scss';
