--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,6 +1,11 @@
+@import '_mixin.scss';
+
 body {
     font-family: 'Roboto', 'Noto Sans TC', sans-serif;
     line-height: 1.5;
+    @include table {
+        font-size: $fz-16;
+    }
 }
 a {
     text-decoration: none;
