--- a/assets/scss/_extend.scss
+++ b/assets/scss/_extend.scss
@@ -1,3 +1,5 @@
+@import '_mixin.scss';
+
 %container {
     max-width: 1320px;
     margin: 0 auto;
@@ -5,6 +7,13 @@
 }
 .container {
     @extend %container;
+    @include table {
+        padding: 0 36px;
+    }
+    @include mobile {
+        padding-left: 13px;
+        padding-right: 14px;
+    }
 }
 %py-80 {
     padding: 80px 0;
