--- a/assets/scss/_mixin.scss
+++ b/assets/scss/_mixin.scss
@@ -1,10 +1,10 @@
 @mixin table {
     @media (max-width: 768px){
-        @content
+        @content;
     }
-};
+}
 @mixin mobile {
     @media (max-width: 375px){
-        @content
+        @content;
     }
-};
+}
