新增feature, classic, co-branding, recommend, contactbox RWD樣式及修改footer css樣式

--- a/assets/scss/_extend.scss
+++ b/assets/scss/_extend.scss
@@ -24,6 +24,9 @@
 .recommend,
 .contact-box {
     @extend %py-80;
+    @include mobile {
+        padding: 40px 0;
+    }
 }
 %title-fz48 {
     font-size: $fz-48;
