--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,5 @@
+@import '../mixin';
+
 //banner
 .banner {
     color: $primary-text-color;
@@ -45,15 +47,31 @@
     &-content {
       display: flex;
       flex-wrap: wrap;
+      @include mobile {
+        justify-content: space-between;
+        align-items: center;
+      }
     }
     &-item {
       width: 306px;
       text-align: center;
+      @include table {
+        width: 336px;
+      }
+      @include mobile {
+        width: 100%;
+      }
       &:nth-child(2){
         margin: 0 12px;
+        @include table {
+          margin: 0;
+        }
       }
       &:nth-child(3){
         margin: 0 12px;
+        @include table {
+          margin: 0;
+        }
       }
       img {
         width: 100px;
@@ -72,9 +90,25 @@
 .classic {
     &-list {
       display: flex;
+      @include table {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
       li {
         &:nth-child(2){
           margin: 0 24px;
+          @include table {
+            margin-top: 24px;
+          }
+          @include mobile {
+            margin: 0;
+          }
+        }
+        &:nth-child(3){
+          @include table {
+            margin-top: 24px;
+          }
         }
       }
       img {
