新增extend title RWD 375 樣式設定

--- a/assets/scss/_extend.scss
+++ b/assets/scss/_extend.scss
@@ -47,9 +47,9 @@
 }
 .title {
     @extend %title-fz48;
-    // @include mobile {
-    //     @extend %title-fz24;
-    // }
+    @include mobile {
+        font-size: $fz-24;
+    }
     &-red {
         color: $primary-text-color;
         &-mb48 {
